--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ SECRET_KEY=sb_secret_AzbGD8GKJ7vM5cxhlMXX2A_j5zOKt5y
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 # Correo desde donde sale TODO
-MAIL_USERNAME=diana@sievert.com.co
+MAIL_USERNAME=diego@sievert.com.co
 # La contraseña de 16 letras de Google (sin espacios)
 MAIL_PASSWORD=eegu hgls pxzc wyvy	
 # Correo de logística
