--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ MAIL_PORT=587
 # Correo desde donde sale TODO
 MAIL_USERNAME=diego@sievert.com.co
 # La contraseña de 16 letras de Google (sin espacios)
-MAIL_PASSWORD=eegu hgls pxzc wyvy	
+MAIL_PASSWORD=eeguhglspxzcwyvy	
 # Correo de logística
 MAIL_LOGISTICS=diego@sievert.com.co
